--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "socket.io-client": "^2.3.0"
   },
   "scripts": {
-    "start": "BROWSER='firefox' react-scripts start",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
